# planet-modeling

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pvtv2.onnx.dvc  pyproject.toml  setup.cfg  weights.dvc
.dvc/: config
config/: base_config.py  config.py  consts.py
data/planet/: .gitignore  sample_submission.csv.dvc  test-jpg.dvc  train-jpg.dvc  train_classes.csv.dvc
inference/: .gitignore  pvt_v2_b1.onnx.dvc  thresholds.txt  thresholds.txt.dvc
notebooks/: init-eda.ipynb
src/: augmentations.py  base_config.py  config.py  convert.py  data.py  model.py  onnx_predict.py  train.py  utils.py
tests/: test_config.py  test_convert.py  test_data.py  test_model.py  test_pretict.py  test_train.py
tests/fixtures/: config.py  model.py
tests/fixtures/data/: train_classes.csv
