[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["qamaz <soldatov@dl-ml.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pandas = "^1.5.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
opencv-python = "^4.6.0.66"
torchvision = "^0.14.0"
torch = "^1.13.0"
scikit-learn = "^1.1.3"
timm = "^0.6.12"
pytorch-lightning = "^1.8.3.post1"
albumentations = "^1.3.0"
torchmetrics = "^0.11.0"
python-dotenv = "^0.21.0"
wandb = "^0.13.5"
protobuf = "3.19"
onnx = "^1.12.0"
onnxruntime = "^1.13.1"
dvc-ssh = "^2.20.0"
iterative-stratification = "^0.1.7"



[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
jupyter = "^1.0.0"
plotly = "^5.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
